# zGraph

./: .gitignore  Cargo.toml  README.md
crates/zann-hnsw/: Cargo.toml  README.md
crates/zann-hnsw/benches/: hnsw_integration.rs
crates/zann-hnsw/examples/: quick_validation.rs
crates/zann-hnsw/src/: lib.rs
crates/zauth/: Cargo.toml  README.md  README_OAUTH.md
crates/zauth/src/: advanced_auth.rs  advanced_session.rs  api.rs  api_2fa.rs  compatibility_tests.rs  credential_middleware.rs  credential_verification.rs  delegation.rs  device_attestation.rs  device_trust.rs  hardware_session_context.rs  hash.rs  identity_permissions.rs  integration.rs  jwt.rs  lib.rs  models.rs  observability.rs  policy.rs  recovery.rs  repository.rs  session.rs  session_security.rs  team.rs  two_factor.rs  validation.rs  webauthn.rs
crates/zauth/src/biometric/: api.rs  hsm.rs  keys.rs  liveness.rs  matching.rs  mod.rs  multimodal.rs  privacy.rs  templates.rs
crates/zauth/src/oauth/: handlers.rs  mod.rs  models.rs  providers.rs  repository.rs  routes.rs  service.rs
crates/zauth/tests/: auth_permissions_integration.rs  oauth_integration.rs  simple_auth_permissions_integration.rs
crates/zbrain/: Cargo.toml  README.md
crates/zbrain/src/: job.rs  lib.rs  observability.rs  queue.rs  scheduler.rs  storage.rs  worker.rs
crates/zcollections/: Cargo.toml  README.md
crates/zcollections/src/: lib.rs
crates/zcommon/: Cargo.toml  README.md
crates/zcommon/src/: health.rs  lib.rs  metrics.rs  tracing.rs
crates/zcore-catalog/: Cargo.toml  README.md
crates/zcore-catalog/src/: lib.rs
crates/zcore-storage/: Cargo.toml  README.md
crates/zcore-storage/src/: distributed.rs  lazy_iter.rs  lib.rs  migration.rs  observability.rs  performance.rs  query_optimization.rs  table.rs  vector_integration.rs
crates/zevents/: Cargo.toml  README.md
crates/zevents/src/: batching.rs  bus.rs  consumer.rs  enhanced_bus_tests.rs  enhanced_sourcing_tests.rs  enhanced_trigger_tests.rs  events.rs  exactly_once_bus.rs  exactly_once_integration_tests.rs  filtering.rs  handlers.rs  hooks.rs  integration.rs  lib.rs  metrics.rs  persistence_tests.rs  persistent_queue.rs  scheduler.rs  sourcing.rs  transaction.rs  triggers.rs  unified_streaming.rs  webhook_integration_tests.rs
crates/zexec-engine/: Cargo.toml  README.md
crates/zexec-engine/src/: cache_invalidation.rs  change_capture.rs  datafusion_integration.rs  lib.rs  transaction_events.rs
crates/zfluent-sql/: Cargo.toml  README.md
crates/zfluent-sql/src/: batch.rs  delete.rs  enhanced_select.rs  error_handling.rs  execution.rs  insert.rs  lib.rs  phantom.rs  prelude.rs  query.rs  select.rs  select_tests.rs  transaction.rs  update.rs  vector.rs  where_clause.rs
crates/zfluent-sql/src/tests/: mod.rs  where_clause_integration.rs
crates/znotifications/: Cargo.toml  README.md
crates/znotifications/src/: config.rs  email.rs  lib.rs  models.rs  providers.rs  repository.rs  sms.rs  templates.rs  tracking.rs
crates/znotifications/templates/: 2fa_code_sms.txt  2fa_grace_period_warning.html  2fa_setup.html  account_recovery_sms.txt  login_suspicious.html  password_reset.html
crates/zobservability/: Cargo.toml  README.md
crates/zobservability/src/: alerts.rs  alerts.rs.backup  collectors.rs  dashboard_configs.rs  distributed_tracing.rs  health.rs  lib.rs  metrics.rs  operational_intelligence.rs  service_health_checks.rs  tracing_setup.rs
crates/zperf-engine/: Cargo.toml  README.md
crates/zperf-engine/src/: allocator.rs  compression.rs  hashing.rs  lib.rs  lockfree.rs  memory_pool.rs  memory_profiler.rs  monitoring.rs  serialization.rs  simd.rs
crates/zpermissions/: Cargo.toml  README.md
crates/zpermissions/src/: lib.rs
crates/zsql-parser/: Cargo.toml  README.md
crates/zsql-parser/src/: lib.rs
crates/zvec-kernels/: Cargo.toml  README.md
crates/zvec-kernels/src/: lib.rs
zgraph/: Cargo.toml
zgraph-cli/: Cargo.toml
zgraph-cli/src/: main.rs
zgraph-server/: Cargo.toml
zgraph-server/src/: auth.rs  bin.rs  endpoints.rs  lib.rs  main.rs  middleware.rs  models.rs  observability.rs
zgraph-server/src/auth/: jwt.rs
zgraph-server/src/handlers/: auth.rs  cypher.rs  health.rs  knn.rs  mod.rs  queries.rs  services.rs  sql.rs  tables.rs
zgraph-server/src/middleware/: auth.rs  logging.rs  metrics.rs  rate_limit.rs  security.rs
zgraph-server/src/zserver/: ANALYSIS_REPORT.md  CLAUDE.md  Cargo.toml  README.md  TODO_STILL.md  zserver_specific_clippy.txt
zgraph-server/src/zserver/benches/: realtime_events_performance.rs
zgraph-server/src/zserver/src/: events.rs  lib.rs  security.rs  websocket_exactly_once.rs
zgraph-server/src/zserver/src/webrtc/: conditional_handlers.rs  database_triggers.rs  functions.rs  handlers.rs  media.rs  mod.rs  realtime_streaming.rs  room.rs  session.rs  subscriptions.rs  transaction.rs  transaction_notifications.rs
zgraph-server/src/zserver/tests/: auth_integ.rs  auth_permission_tests.rs  collection_tests.rs  file_tests.rs  integration_tests.rs  job_tests.rs  load_tests.rs  sql_api_integration.rs  vector_search_tests.rs  webrtc_integration.rs  webrtc_test.rs
zgraph-server/src/zserver/tests/common/: mod.rs
zgraph/src/: cypher.rs  error.rs  fjall_db.rs  graph.rs  index.rs  lib.rs  permissions.rs  query.rs  schema.rs  sparql.rs  types.rs
