[workspace]
members = [
  "zgraph",
  "zgraph-cli",
  "zgraph-server",
  "crates/zvec-kernels",
  "crates/zcore-storage",
  "crates/zcore-catalog",
  "crates/zann-hnsw",
  "crates/zfluent-sql",
  "crates/zpermissions",
  "crates/zsql-parser",
  "crates/zexec-engine",
  "crates/zauth",
  "crates/zevents",
  "crates/zperf-engine",
  "crates/zcommon",
  "crates/znotifications",
  "crates/zbrain",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["zGraph contributors"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync", "process", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"

# Storage
fjall = "2.0"
redb = "2.1"
parking_lot = "0.12"
indexmap = "2"
bincode = "1.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures-util = "0.3"

# Performance
wide = "0.7"
ahash = "0.8"
rustc-hash = "2.0"
crossbeam = "0.8"
rayon = "1.8"
raw-cpuid = "11.0"
hashbrown = "0.14"

# SQL & Querying
sqlparser = "0.52"
datafusion = "49.0.2"
datafusion-sql = "49.0.2"
datafusion-physical-expr = "49.0.2"
arrow = "55.2"

# SPARQL & Querying
spargebra = "0.3"
sparopt = "0.1"
spareval = "0.1"

# Security & Auth
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
rand = "0.8"
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Web Server & GraphQL
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-graphql = "7.0"
async-graphql-axum = "7.0"
hyper = "1.0"
reqwest = { version = "0.12", features = ["json"] }

# Utilities
once_cell = "1.19"
regex = "1"
tempfile = "3.8"
tokio-test = "0.4"
bytes = "1.7"
hex = "0.4"
ulid = { version = "1", features = ["serde"] }
bitflags = "2"
governor = "0.6"
nonzero_ext = "0.3"
cron = "0.12"
