[package]
name = "zgraph-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
zgraph = { path = "../zgraph" }
anyhow = "1"
bincode = "1"

# Fjall-backed storage + HNSW from vendored crates
zcore-storage = { path = "../crates/zcore-storage" }
zcore-catalog = { path = "../crates/zcore-catalog" }
zann-hnsw = { path = "../crates/zann-hnsw" }
