[package]
name = "zann-hnsw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
zvec-kernels = { path = "../zvec-kernels" }
parking_lot = "0.12"
bincode = "1.3"
once_cell = "1"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
