[package]
name = "zbrain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-util = { version = "0.7.16", features = ["full"] }
sha2 = "0.10.9"
zcore-storage = { path = "../zcore-storage" }
zcommon = { path = "../zcommon" }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
