[package]
name = "zcollections"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
zcore-storage = { path = "../zcore-storage" }
zcore-catalog = { path = "../zcore-catalog" }
simd-json = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
