[package]
name = "zcore-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
fjall = "2.0"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
parking_lot = "0.12"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "fs", "io-util", "time"] }
ahash = "0.8"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
async-stream = "0.3"
zvec-kernels = { path = "../zvec-kernels", optional = true }
zann-hnsw = { path = "../zann-hnsw", optional = true }

# Backup and recovery
flate2 = "1.0"
tar = "0.4"
walkdir = "2.4"
tempfile = "3.8"

# Type-safe table definitions
derive_builder = "0.12"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# CLI tool dependencies
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random utilities
rand = "0.8"

[features]
default = []
distributed = []
vectors = ["zvec-kernels", "zann-hnsw"]
full = ["distributed", "vectors"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"