[package]
name = "zexec-engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"
indexmap = "2"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
regex = "1"
bincode = "1.3"
uuid = { version = "1", features = ["v4", "serde"] }
ahash = "0.8"
# Internal dependencies
zvec-kernels = { path = "../zvec-kernels" }
zsql-parser = { path = "../zsql-parser" }
zcore-storage = { path = "../zcore-storage" }
zcore-catalog = { path = "../zcore-catalog" }
zevents = { path = "../zevents" }
zauth = { path = "../zauth" }
zann-hnsw = { path = "../zann-hnsw" }
zperf-engine = { path = "../zperf-engine" }
# SQL parsing
sqlparser = "0.52"

# Optional DataFusion query optimization (requires feature flag)
datafusion = { version = "49.0.2", optional = true, features = ["unicode_expressions"] }
datafusion-sql = { version = "49.0.2", optional = true }
datafusion-physical-expr = { version = "49.0.2", optional = true }
arrow = { version = "55.2", optional = true }
parquet = { version = "55.2", optional = true }

[features]
default = []
datafusion = ["dep:datafusion", "dep:datafusion-sql", "dep:datafusion-physical-expr", "dep:arrow", "dep:parquet"]

[dev-dependencies]
tempfile = "3"
rand = "0.8"