[package]
name = "zfluent-sql"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Zach Handley <zachhandley@gmail.com>"]

[dependencies]
# Core workspace deps
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Database deps - local paths
zcore-storage = { path = "../zcore-storage" }
zcore-catalog = { path = "../zcore-catalog" }
zann-hnsw = { path = "../zann-hnsw" }
zvec-kernels = { path = "../zvec-kernels" }
zexec-engine = { path = "../zexec-engine" }

# Type safety
once_cell = { workspace = true }
parking_lot = { workspace = true }

# Additional dependencies for expanded functionality
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fluent_sql_benchmarks"
harness = false