[package]
name = "znotifications"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# AWS SDK dependencies
aws-config = "1.0"
aws-sdk-ses = "1.0"
aws-sdk-sns = "1.0"

# HTTP client and email
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
lettre = "0.11"

# Template engines
handlebars = "5.0"

# Async utilities
tokio-util = { version = "0.7", features = ["io"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Storage integration
zcore-storage = { path = "../zcore-storage" }

# Async trait support
async-trait = "0.1"

# Serialization and IDs
ulid = { version = "1.0", features = ["serde"] }
bincode = "1.3"

# Database
redb = "2.0"

# Template embedding
rust-embed = "8.0"