[package]
name = "zpermissions"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Zach Handley <zachhandley@gmail.com>"]

[dependencies]
anyhow = { workspace = true }
bitflags = "2"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zcore-storage = { path = "../zcore-storage" }

[dev-dependencies]
tempfile = { workspace = true }
